--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -108,12 +108,15 @@
 
 /* Section Title */
 .sidebar-section {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
     color: rgba(255, 255, 255, 0.6);
     letter-spacing: 0.5px;
     margin: 18px 0 6px 8px;
+}
+.sidebar ul li:not(.sidebar-section) {
+    padding-left: 1rem !important;
 }
 
 /* Link */
